examples/test/testpolicy17391.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17391
  namespace: namespace134
spec:
  podSelector:
    matchLabels:
      key30: value0
      key0: value26
      key12: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value16
          key17: value33
          key46: value34
